ChangeLog: 

04/21/2010:
	## Wrote and implemented a "markdown-lite" parser
		@@ Users are able to send bolded, italicized, and underlined text
	## Centered new windows on creation
		@@ I was tired of dragging them out of corners
	## Added a real taskbar icon
		@@ The default java one was really ugly
	## Bugfixes left over from yesterday

4/20/2010:
	## Implemented dual-socket connection
		@@ Allows for more stable communication with the server
		@@ Simplifies data flow
	## Fixed logout hash table bug with static username
	## Made user accounts entirely portable
		@@ Pulls down private, public keys, and buddylist with their pubkeys
	## Implemented jeditorpane and jtextarea
		@@ Implemented fonts in editorpane

4/18/2010:
	## Visual Notifications on each tab!!!!
	## All tabs close cleanly (better memory management)
	## Added an about page and web link
	
4/16/2010:
	## Implemented private key encryption
	## Implemented sending buddylist to server
		!! When checking the hashes, the hashes end up different, even though they should be the same (verified with md5sum)
		!! Check github for the BUG ticket
4/15/2010:
	## Implemented message chunking (so you can send receive large messages)
	## UI Fixes
	## Fixes issues with buddylist
4/14/2010:
	## Encrypion Process Completed
		!! Finished implementing message encryption. 	
		!! Fully working encrypted: Creating a user, logging in, adding a buddy, removing a buddy, public key exchange, contact list, and now messaging
			@@Proven on wireshark, see blog post at athenachat.org
	## Implemented statuses while registering a user
		!! Shows the status of the register attempt via the ClientLoginFailed class (will change name soon).
	## Fixed and implemented validation checking in the UserRegistration window
	## Fixed tab focus issues, now whenever you spawn a new tab the focus is at the textField
	## Fixed "No Such User" public key error
	## Implemented standard themes in the combobox in the PreferencesWindow